platform_components/web/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    name: web-service
spec:
  ports:
  - name: web-app-http
    port: 80
    targetPort: 8000
  selector:
    name: web-app
